# sea_orm_examples

./: .gitignore  Cargo.toml  README.md
SimpleCrud/: .env  Cargo.toml
SimpleCrud/src/: main.rs
SimpleCrud/src/fruits_table/: fruit.rs  mod.rs  prelude.rs
SimpleCrud/src/suppliers_table/: mod.rs  prelude.rs  suppliers.rs
todo-app/server/: .env  Cargo.toml
todo-app/server/src/: main.rs  routing.rs
todo-app/server/src/fruits_list_table/: fruits.rs  mod.rs  prelude.rs
todo-app/server/src/todo_list_table/: prelude.rs
