[package]
name = "simple-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["attributes"] }
chrono = "0.4.19"
sea-orm = { version = "0.7.1", features = ["runtime-async-std-rustls", "sqlx-mysql", "macros", "with-chrono"], default-features = false }
