[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.3"
dotenv = "0.15.0"
once_cell = "1.10.0"
sea-orm = { version = "0.7.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
